TableRates for Commerce 1.4.0-pl
--------------------------------
Released on 2023-03-14

- If there are no matches, the shipping method is no longer available for customers. If you do want it to be available, add a fallback row (*,*,*,0,price) at the start of your CSV data [#3]
- Make sure the shipping method is available if the minimum weight is exactly the same as the actual weight [#4]

TableRates for Commerce 1.3.0-pl
--------------------------------
Released on 2022-12-31

- Add minimum and maximum weight conditions to enable/disable the shipping method [F2420]

TableRates for Commerce 1.2.0-pl
--------------------------------
Released on 2022-01-31

- Remove vendor directory from version control

TableRates for Commerce 1.2.0-dev1
--------------------------------
Released on 2021-06-15

- Add support for partial zipcode matches with a * suffix
- Add support for multiple zipcodes per CSV row by separating individual values with |

TableRates for Commerce 1.1.2-pl
--------------------------------
Released on 2020-09-15

- Optimize autoloader to avoid class loading issue

TableRates for Commerce 1.1.1-pl
--------------------------------
Released on 2019-02-26

- Change form definition to use a Tab instead of a SectionField, fixing issue with the display introduced in 0.11

TableRates for Commerce 1.1.0-pl
--------------------------------
Released on 2018-10-19

- Make the weight unit, used in the provided CSV, configurable instead of hardcoded to grams [#1]

TableRates for Commerce 1.0.0-pl
--------------------------------
Released on 2018-02-02

- Official release, with new translations

TableRates for Commerce 1.0.0-rc1
---------------------------------
Released on 2017-12-28

- First release