@@ -4,7 +4,7 @@
   "license": "MIT",
   "config": {
     "platform": {
-      "php": "7.1.0"
+      "php": "7.4.0"
     }
   },
   "require": {
