@@ -2,6 +2,8 @@ TableRates for Commerce 1.4.0-pl
 --------------------------------
 Released on 2023-03-14
 
+- Fix EventDispatcher compatibility; now requires Commerce 1.3+
+- Increase minimum PHP version to 7.4
 - If there are no matches, the shipping method is no longer available for customers. If you do want it to be available, add a fallback row (*,*,*,0,price) at the start of your CSV data [#3]
 - Make sure the shipping method is available if the minimum weight is exactly the same as the actual weight [#4]
 
